<resources>
    <string name="app_name">Assistência técnica</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Usuario produtor Lider</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">definições</string>
    <string name="action_out">Sair</string>


    <string name="menu_admin">Pagina inicial</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_produtor_lider">Produtors lider</string>

    <string name="select_pais">Pais</string>
    <string name="select_province">Provincia</string>
    <string name="select_distrito">Distrito</string>
    <string name="select_posto_administrativo">Posto administrativo</string>
    <string name="select_localidade">Localidade</string>
    <string name="select_comunidade">Comunidade</string>
    <string name="select_etnia">Etnia</string>
    <string name="select_cultura">Culturas</string>


    <string name="navegation_drawer_open">Open navegation drawer</string>
    <string name="navegation_drawer_close">Close navegation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>