<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_admin">

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.example.machambaapp.ui.home.HomeFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.example.machambaapp.ui.clientes.ClientesFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_produtor_lider"
        android:name="com.example.machambaapp.ui.produtorLider.ProdutorLiderFragment"
        android:label="@string/menu_produtor_lider"
        tools:layout="@layout/fragment_rodutor_lider" />

    <fragment
        android:id="@+id/nav_distrito"
        android:name="com.example.machambaapp.ui.distrito.DistritoFragment"
        android:label="@string/select_distrito"
        tools:layout="@layout/fragment_distrito" />
    <fragment
        android:id="@+id/nav_posto_administrativo"
        android:name="com.example.machambaapp.ui.postoAdministrativo.PostoAdministrativoFragment"
        android:label="@string/select_posto_administrativo"
        tools:layout="@layout/fragment_posto_administratio" />
</navigation>