<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_UserRegister">



    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_launcher_foreground"
            android:id="@+id/imageTopR" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/icon_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User Register"
            android:layout_marginTop="12dp"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            android:id="@+id/titleR"
            android:layout_below="@id/imageTopR"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleR"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="dga  csdjcnksj sasnajc csdcjckdscdsjek"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/subTitle"
            android:layout_marginTop="10dp"
            android:padding="30dp"
            android:id="@+id/linearlayout_1"
            >

            <EditText
                android:drawableLeft="@drawable/baseline_person_24"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="  Enter your full name"
                android:paddingLeft="10dp"
                android:textSize="16dp"
                android:background="@drawable/button_sape"
                android:id="@+id/idFullName"
                />

            <EditText
                android:drawableLeft="@drawable/baseline_phone_26"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:hint="  Enter your phone"
                android:textSize="16dp"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_sape"
                />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/linearlayout_1"
            android:padding="30dp"
            android:id="@+id/linearlayout_2"
            >
            <TextView
                android:layout_centerHorizontal="true"
                android:layout_below="@id/linearlayout_1"
                android:id="@+id/text_areas"
                android:layout_gravity="center"
                android:text="Selecione a Localização "
                android:textSize="18dp"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textinputlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                app:boxCornerRadiusTopEnd="23dp"
                app:boxCornerRadiusTopStart="23dp"
                app:boxCornerRadiusBottomEnd="23dp"
                app:boxCornerRadiusBottomStart="23dp"
                android:hint="@string/select"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView

                    android:id="@+id/auto_select"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textinputlayout_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:hint="@string/select_posto_administrativo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/idPostoAdministrativo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_sape"
                    android:inputType="none" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textinputlayout_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:hint="@string/select_localidade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/idLocalidade"
                    android:background="@drawable/button_sape"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/textinputlayout_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:hint="@string/select_comunidade"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                <AutoCompleteTextView
                    android:id="@+id/idComunidade"
                    android:background="@drawable/button_sape"
                    android:inputType="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>





        <Button
            android:layout_below="@id/linearlayout_2"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:width="300dp"
            app:cornerRadius="15sp"
            android:padding="15sp"
            android:backgroundTint="@color/teal_200"
            android:text="Add user"
            android:textStyle="bold" />



    </RelativeLayout>



</ScrollView>